<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_F4F4F4"

    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="match_parent"
        android:textAlignment="textStart"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:drawableStart="@mipmap/close_black_btn"
        android:padding="16dp"
        android:background="@color/c_ffffff"
        android:text="@string/bind_user"
        android:textColor="@color/c_FF001208"
        android:textSize="18sp"
        android:textStyle="bold"
        />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="44dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/shape_bg_login"
            android:minHeight="281dp"/>


        <TextView
            android:id="@+id/tv_lg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:drawablePadding="3dp"
            android:drawableTop="@mipmap/ic_launcher_round"
            android:text="@string/app_name"
            android:textColor="@color/c_FF001208"
            android:textSize="17sp"
            android:textStyle="bold"
            />


        <TextView
            android:id="@+id/etv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_lg"
            android:layout_marginEnd="27dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="45dp"
            android:textAlignment="viewStart"
            android:background="@drawable/green_line"
            android:drawableLeft="@mipmap/email_ic"
            android:drawablePadding="16dp"
            android:textColor="@color/c_FF001208"
            android:drawableStart="@mipmap/email_ic"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="10dp"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/etv_psd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etv_email"
            android:layout_marginEnd="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/c_FF001208"
            android:background="@drawable/green_line"
            android:drawableLeft="@mipmap/key_ic"
            android:drawablePadding="16dp"
            android:drawableStart="@mipmap/key_ic"
            android:hint="@string/input_psd"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:textColorHint="@color/c_4D001208"
            android:textSize="15sp"/>


        <TextView
            android:id="@+id/tv_deal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etv_psd"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:background="@drawable/shape_btn_save"
            android:gravity="center"
            android:minHeight="44dp"
            android:minWidth="180dp"
            android:text="@string/ok"
            android:textColor="@color/c_ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="19dp"
        android:text="@string/tip_bind_user"
        android:textColor="@color/c_FF828282"
        android:textSize="36px"
        />


</LinearLayout>