<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_F4F4F4"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="match_parent"
        android:textAlignment="textStart"
        android:background="@color/c_ffffff"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:drawableStart="@mipmap/close_black_btn"
        android:padding="16dp"
        android:text="@string/set_psd"
        android:textColor="@color/c_FF001208"
        android:textSize="18sp"
        android:textStyle="bold"
        />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_height="340dp"
        android:layout_marginRight="31dp"
        android:layout_marginTop="44dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/shape_bg_login"
            android:minHeight="295dp"/>


        <TextView
            android:id="@+id/tv_lg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:drawablePadding="3dp"
            android:drawableTop="@mipmap/ic_launcher_round"
            android:text="@string/app_name"
            android:textColor="@color/c_FF001208"
            android:textSize="17sp"
            android:textStyle="bold"
            />


        <EditText
            android:id="@+id/etv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_lg"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:layout_marginTop="45dp"
            android:textAlignment="viewStart"
            android:textColor="@color/c_FF001208"
            android:background="@drawable/green_line"
            android:drawableLeft="@mipmap/email_ic"
            android:drawablePadding="16dp"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:textColorHint="@color/c_4D001208"
            android:textSize="15sp"
            android:layout_marginEnd="27dp"
            android:drawableStart="@mipmap/email_ic"
            android:layout_marginStart="27dp"/>

        <RelativeLayout
            android:id="@+id/rl_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etv_email"
            android:background="@drawable/green_line"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:layout_marginTop="20dp"
            android:paddingBottom="10dp"
            android:layout_marginEnd="27dp"
            android:layout_marginStart="27dp">

            <EditText
                android:id="@+id/etv_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/tv_time"
                android:background="@color/bg_no"
                android:maxLength="10"
                android:textColor="@color/c_FF001208"
                android:maxLines="1"
                android:textAlignment="viewStart"
                android:inputType="number"
                android:textColorHint="@color/c_4D001208"
                android:textSize="15sp"
                android:layout_toStartOf="@id/tv_time"/>

            <com.base.muslim.view.ArNumberTextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/c_80334139"
                android:layout_alignParentRight="true"
                android:textSize="15sp"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:id="@+id/tv_get_code"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_code"
                android:textColor="@color/c_FF5D03"
                android:textSize="15sp"
                android:textAlignment="viewStart"
                />


        </RelativeLayout>

        <EditText
            android:id="@+id/etv_psd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_code"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/green_line"
            android:drawableLeft="@mipmap/key_ic"
            android:drawablePadding="16dp"
            android:hint="@string/set_new_psd"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="@color/c_FF001208"
            android:paddingBottom="10dp"
            android:textColorHint="@color/c_4D001208"
            android:textSize="15sp"
            android:layout_marginEnd="27dp"
            android:drawableStart="@mipmap/key_ic"
            android:layout_marginStart="27dp"/>


        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape_btn_save"
            android:gravity="center"
            android:minHeight="44dp"
            android:minWidth="180dp"
            android:layout_alignParentBottom="true"
            android:text="@string/ok"
            android:textColor="@color/c_ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </RelativeLayout>


</LinearLayout>